# gandi-v5-rs

./: .dockerignore  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
custom-ddns/: Cargo.toml  Dockerfile  README.md
custom-ddns/config/: local.yaml
custom-ddns/src/: app.rs  config.rs  main.rs
custom-ddns/src/app/: cddns.rs  health.rs
gandi-v5-livedns-api/: Cargo.toml  README.md
gandi-v5-livedns-api/src/: api.rs  common.rs  engine.rs  lib.rs
gandi-v5-livedns-api/src/api/: domains.rs  records.rs
gandictl/: Cargo.toml  README.md
gandictl/src/: cli.rs  livedns.rs  main.rs  output.rs
gandictl/src/livedns/: domains.rs
packaging/: README.md
packaging/archlinux/custom-ddns/: PKGBUILD  custom-ddns.service  prod.yaml
packaging/archlinux/gandictl/: PKGBUILD  gandictl-ddns  gandictl-ddns.service  gandictl-ddns.timer
