[package]
name = "custom-ddns"
version = "0.1.0"
edition = "2021"
authors = ["mickybart <mickybart@pygoscelis.org>"]
description = "Custom Dynamic DNS service provider"
repository = "https://github.com/mickybart/gandi-v5-rs"
readme = "README.md"
license = "Apache-2.0"
categories = [""]
keywords = ["gandi", "dns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["tracing"] }
config = "0.14.0"
gandi-v5-livedns-api = { path = "../gandi-v5-livedns-api" }
serde = "1.0.197"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
