[package]
name = "gandictl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
gandi-v5-livedns-api = { path = "../gandi-v5-livedns-api" }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
